# cmake-cpp-cuda

./: CMakeLists.txt
include/: cuda_example.cuh
modules/: module_example.cppm
scripts/: build.sh  run.sh
src/: cuda_example.cu  main.cpp
